fixed new icon spacing issue

--- a/src/components/about-slides-buildit.css
+++ b/src/components/about-slides-buildit.css
@@ -206,7 +206,7 @@ Alpha to Omega story*/
 .ui.image.about-icon{
   margin: 0 auto;
   height: 190px;
-  margin-bottom: -40px;
+  margin-bottom: -20px;
   margin-top: -60px;
 }
 
